syntax="proto3";

package blog_service;

option go_package="./pb";


service Blog_Service{
    rpc CreateBlog (CreateBlogRequest) returns (BlogResponse);
    rpc GetBlog(GetBlogRequest) returns(BlogListResponse);
    rpc UpdateBlog(UpdateBlogRequest) returns (BlogResponse);
    rpc DeleteBlog(DeleteBlogRequest) returns(MessageResponse);
}

message CreateBlogRequest{
    string title=1;
    string description=2;
    string author_id=3;
}

message GetBlogRequest{
    string id=1;
}

message UpdateBlogRequest{
    string id=1;
    string title=2;
    string description=3;
}

message DeleteBlogRequest{
    string id =1;
}

message BlogResponse{
    string id =1;
    string title=2;
    string description=3;
    string author_id=4;
    string message =5;
}

message BlogListResponse{
    repeated BlogResponse blogs =1;
}

message MessageResponse{
    string message =1;
}
